Fixed Max Height and Padding

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="wrap q">
-	<div class="section sTop">
+<div class="wrap">
+	<div class="section stop">
 		<div class="inner">
 			<h1 class="title">Buicks & Mazdas!</h1>
 			<h2 class="subtitle">This is the episode where the Mazda wins!</h2>
@@ -21,7 +21,7 @@
 			<a href="#s2" class="subNavBtn">Mazdas</a>
 			<a href="#s3" class="subNavBtn">Comparisons</a>
 			<a href="#s4" class="subNavBtn">Where to buy Buicks</a>
-			<a href="#s5" class="subNavBtn">Where to Buy Mazdas</a>
+			<a href="#s5" class="subNavBtn">Where to buy Mazdas</a>
 			<a href="https://twitter.com/grahammcbain" class="subNavBtn extLink end">Follow me on twitter</a>
 		</div>
 	</div>
